<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.8</version>
    <relativePath />
  </parent>

  <groupId>com.earmo</groupId>
  <artifactId>onlyoffice-integration-starter</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>onlyoffice-integration-starter</name>
  <description>ONLYOFFICE integration starter parent project</description>

  <modules>
    <module>onlyoffice-integration-data</module>
    <module>onlyoffice-integration-service</module>
  </modules>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    <!-- Phase 14.2 版本基线：Spring Boot 3.5.8 + Spring AI 1.1.2 (升级以支持 reasoning_content) -->
    <spring-ai.version>1.1.4</spring-ai.version>
    <jjwt.version>0.12.6</jjwt.version>
    <mybatis-flex.version>1.11.6</mybatis-flex.version>
    <knife4j.version>4.5.0</knife4j.version>
    <springdoc.version>2.8.15</springdoc.version>
    <tencent.cos.version>5.6.246.3</tencent.cos.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.ai</groupId>
        <artifactId>spring-ai-bom</artifactId>
        <version>${spring-ai.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
